# optionskit

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
examples/: analytics_overview.py  bull_call_spread.py  covered_call.py  iron_condor.py  long_call.py  short_strangle.py  straddle.py  stress_iron_condor.py
optionskit/: __init__.py  analytics.py  greeks.py  iv.py  presets.py  pricing.py  strategies.py  stress.py
tests/: conftest.py  test_analytics.py  test_greeks.py  test_iv.py  test_presets.py  test_pricing.py  test_strategies.py  test_stress.py
